validation modal fixed

--- a/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
@@ -132,13 +132,21 @@
                                     <td class="text-center">{{ bhw.bhw_barangay }}</td>
                                     <td style="text-align: center;">
                                         <div>
-                                            <button type="button" style="background-color: #188045; color: #ffffff;" class="btn" title="Validate" onclick="toggleModal('{% url 'unvalidated_profile' bhw.user.id %}', 'Are you sure you want to validate {{ bhw.user.first_name }} {{ bhw.user.last_name }}?')"><i class="fa fa-lg fa-fw fa-user-check"></i></button>
-                                            <button type="button" style="color: rgb(255, 0, 0);" class="btn" onclick="toggleModal('{% url 'delete_profile' bhw.user.id %}', 'Are you sure you want to delete {{ bhw.user.first_name }} {{ bhw.user.last_name }}?')" title="Delete"><i class="fa fa-lg fa-fw fa-trash-alt"></i></button>
+                                            <button type="button" style="background-color: #188045; color: #ffffff;" class="btn" title="Validate" onclick="toggleValidateModal('Are you sure you want to validate {{ bhw.user.first_name }} {{ bhw.user.last_name }}?')"><i class="fa fa-lg fa-fw fa-user-check"></i></button>
+                                            <button type="button" style="color: rgb(255, 0, 0);" class="btn" onclick="toggleDeleteModal('Are you sure you want to delete {{ bhw.user.first_name }} {{ bhw.user.last_name }}?')" title="Delete"><i class="fa fa-lg fa-fw fa-trash-alt"></i></button>
                                         </div>
                                         <script>
-                                            function toggleModal(redirect, message) {
+                                            function toggleValidateModal(message) {
                                                 $('#message').text(message);
-                                                $('#form').attr('action', redirect);
+                                                $('#form').attr('action', "{% url 'unvalidated_profile' bhw.user.id %}");
+                                                var myModal = new bootstrap.Modal(document.getElementById('validate'), {
+                                                    keyboard: false
+                                                });
+                                                myModal.toggle();
+                                            }
+                                            function toggleDeleteModal(message) {
+                                                $('#message').text(message);
+                                                $('#form').attr('action', "{% url 'delete_profile' bhw.user.id %}");
                                                 var myModal = new bootstrap.Modal(document.getElementById('validate'), {
                                                     keyboard: false
                                                 });
