--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
@@ -16,8 +16,8 @@
                 <div id="navLinks">
                     <ul class="nav text-small">
                         <li>
-                            <a href="{% url 'preschooler_dashboard' %}"  style="border-radius: 13%;"class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
-                            title="Go back to Preschooler Dashboard">
+                            <a href="{% url 'preschooler_profile' preschooler.id %}"  style="border-radius: 13%;"class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
+                            title="Go back to Preschooler Profile">
                             <i class="fa fa-lg fa-fw fa-chevron-circle-left" style="font-size: 24px;"></i>    
                             <span style="color:rgb(3, 3, 3);">Back</span>   
                             </a>
@@ -61,8 +61,22 @@
                 <div class="card shadow-lg p-3 bg-white rounded" >
                     <div class="table-responsive">
                         <table class="table table-hover table-cell-border" id="table_validation">
+                            <div class="d-flex justify-content-between">
+                            {% if preschooler.suffix_name is None %}
+                                        <div class="d-flex justify-content-start">
+                                            <p style="font-size:20px; font-weight:bold;margin-right: 10px;">Name:</p>
+                                            <p class="text-dark mb-0" style="font-size: 20px;">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }}</p>
+                                        </div>
+                                    {% else %}
+                                        <div class="d-flex justify-content-start">
+                                            <p style="font-size:20px; font-weight:bold; margin-right:10px;">Name:</p>
+                                            <p class="text-dark mb-0" style="font-size: 20px;">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}</p>
+                                        </div>
+                                    {% endif %}
+                                
                             <div class="" style="text-align: right !important; ">
                                 <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update"><span class="fas fa-calendar-edit"></span> Immunization Update</button>
+                            </div>
                             </div>
                             <div class="modal fade" id="update" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -175,7 +189,7 @@
                                                     <input required class="form-control" type="date" name="immune_date" id="immune_date">
                                                 </div>
                                                 <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Remarks:</label>
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Next Vaccine Date:</label>
                                                     <input class="form-control" type="date" name="remarks" id="remarks">
                                                 </div>
                                                 <div class="modal-footer">
@@ -195,7 +209,7 @@
                                     <th scope="col" class="text-center">Doses</th>
                                     <th scope="col" class="text-center">Required Doses</th>
                                     <th scope="col" class="text-center">Immunization Date</th>
-                                    <th scope="col" class="text-center">Remarks</th>
+                                    <th scope="col" class="text-center">Next Vaccine Date</th>
                                 </tr>
                             </thead>
                             {% for vaccine in vaccines %}
