--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -68,6 +68,12 @@
                             {% endif %}
                         </li>
                         <li>
+                            <a href="{% url 'admin_users' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            title="User Accounts">
+                            <i class="fa fa-3x fa-fw fas fa-users " style="font-size: 24px;"></i>
+                            </a>
+                        </li>
+                        <li>
                             <a class="btn nav-link position-relative" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="User Settings" aria-expanded="false">
                                 <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
